--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ chardet==3.0.4
 click==7.1.2
 deemix==1.5.5
 dnspython==1.16.0
+dominate==2.6.0
 eventlet==0.28.0
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-SocketIO==4.3.1
 fuzzywuzzy==0.18.0
 greenlet==0.4.17
@@ -26,4 +28,5 @@ spotipy==2.16.0
 tqdm==4.50.0
 typing-extensions==3.7.4.3
 urllib3==1.25.10
+visitor==0.1.3
 Werkzeug==1.0.1
